crates/keron-lang/tests/corpus/errors/check/shell_wrong_arg_type.keron
val refresh: Shell = shell(kind = "sh", name = "refresh", script = 1)
